--- a/css/main.css
+++ b/css/main.css
@@ -19,37 +19,40 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 700px;
-    height: 700px;
+    width: 400px;
+    height: 300px;
+    margin: 0 auto;
     background-color: gold;
 
 }
 
 .slots {
     display: flex;
+    font-size: 100px;
 
 }
 
 .slot1 {
 
-    background-color: white;
+    background-color: black;
 
 }
 
 .slot2 {
 
-    background-color: gray;
+    background-color: black;
 }
 
 .slot3 {
 
-    background-color: white;
+    background-color: black;
 
 }
 
 .button1 {
     color: black;
-    background-color: gold;
+    background-color: gray;
+    font-size: 20px;
 }
 
 
